<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many
        tags.
    </string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="style_hint">style should be number</string>
    <string name="app_name">百信学车教练端</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="phone">请输入用户名/手机号码</string>
    <string name="password">请输入用户密码</string>
    <string name="login_btn">登 录</string>
    <string name="changePwd">修改密码</string>
    <string name="register">注\u3000\u3000册</string>
    <string name="callback">找回密码</string>
    <string name="morenews">更多关于百信学车</string>
    <string name="baixin">百信学车</string>
    <string name="underline_text">
        <u>百信学车服务条款</u>
    </string>
    <string name="version_unknown">请求异常</string>
    <string name="line">
        <hr/>
    </string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>