<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_bg"
    tools:context=".activity.WelcomeActivity"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://schemas.android.com/tools ">

    <ImageView
        android:id="@+id/login_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/header_image"
        android:layout_marginTop="70dp"
    />
    <LinearLayout
        android:id="@+id/linear_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_name_img"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/coachName"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:hint="@string/phone"
                    android:textColorHint="#FFFFFF"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#FFFFFF"
                    android:layout_marginTop="3dp"
                />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/password_img"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:textColorHint="#FFFFFF"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#FFFFFF"
                    android:layout_marginTop="3dp"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_below="@+id/linear_EditText"
        android:id="@+id/login_button_id"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_num_btn"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"/>

    <LinearLayout
        android:layout_below="@+id/login_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/changePwd_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/callback_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/callback"
            android:textColor="@color/white"/>
    </LinearLayout>


</RelativeLayout>